--- a/jaiutil/build.xml
+++ b/jaiutil/build.xml
@@ -955,4 +955,22 @@
      <antstructure output="project.dtd"/>
   </target>
 
+  <!-- 
+   ! Run up JSwat. Only works at Durham as pdraper...
+   !-->
+  <target name="jswat"
+          depends="compile-tests">
+
+    <path id="jswat-classpath">
+       <path refid="tests-classpath"/>
+       <pathelement 
+           location="/loc/pwdb/pdraper/java/jswat/jswat-2.10/jswat.jar"/>
+       <pathelement location="/stardev/java/jdk-1.4.0_01/lib/tools.jar"/>
+    </path> 
+    <java classname="com.bluemarsh.jswat.Main" fork="true">
+      <classpath refid="jswat-classpath"/>
+    </java>
+  </target>
+
+
 </project>
