--- a/ant/src/main/org/apache/tools/ant/taskdefs/defaults.properties
+++ b/ant/src/main/org/apache/tools/ant/taskdefs/defaults.properties
@@ -177,3 +177,9 @@ copydir=org.apache.tools.ant.taskdefs.Copydir
 copyfile=org.apache.tools.ant.taskdefs.Copyfile
 deltree=org.apache.tools.ant.taskdefs.Deltree
 rename=org.apache.tools.ant.taskdefs.Rename
+
+# starlink extensions
+listdelete=uk.ac.starlink.ant.tasks.ListDelete
+loggedcopy=uk.ac.starlink.ant.tasks.LoggedCopy
+extdirproperty=uk.ac.starlink.ant.tasks.ExtdirProperty
+
