--- a/array/build.xml
+++ b/array/build.xml
@@ -102,7 +102,7 @@
   <property name="junit.assertions" value="-enableassertions"/>
 
   <!-- Directory containing the package source -->
-  <property name="src.dir" value="src"/>
+  <property name="src.dir" value="${basedir}/src"/>
 
   <!-- Directory containing the java source (top of the namespace)-->
   <property name="java.dir" value="${src.dir}/main"/>
@@ -123,7 +123,7 @@
   <property name="unfiltered.files" value="**/*.gif,**/*.jpg,**/*.ico"/>
 
   <!-- Directories to receive the various build components -->
-  <property name="build.dir" value="build"/>
+  <property name="build.dir" value="${basedir}/build"/>
   <property name="build.classes" value="${build.dir}/classes"/>
   <property name="build.java" value="${build.dir}/java"/>
   <property name="build.jni" location="${build.dir}/jni"/>
