--- a/coco/build.xml
+++ b/coco/build.xml
@@ -893,8 +893,7 @@
    !   ============
    !-->
   <target name="test"
-          depends="run-tests"
-          description="-> run JUnit tests"/>
+          description="-> does nothing"/>
 
   <target name="run-tests"
           depends="compile-tests"
