--- a/pal/build.xml
+++ b/pal/build.xml
@@ -890,8 +890,7 @@
    !   ============
    !-->
   <target name="test"
-          depends="run-tests"
-          description="-> run JUnit tests"/>
+          description="-> does nothing"/>
 
   <target name="run-tests"
           depends="compile-tests"
