--- a/build.xml
+++ b/build.xml
@@ -179,6 +179,9 @@
 
     <echo message="Executing Treeview target: ${what}"/>
     <ant dir="./treeview" target="${what}"/>
+
+    <echo message="Executing Mirage target: ${what}"/>
+    <ant dir="./mirage" target="${what}"/>
     
     <echo message="Executing Pal target: ${what}"/>
     <ant dir="./pal" target="${what}"/>
