Updated build.xml file to build FROG along with the rest of the applications

--- a/build.xml
+++ b/build.xml
@@ -192,6 +192,9 @@
     <echo message="Executing RV target: ${what}"/>
     <ant dir="./rv" target="${what}"/>
     
+    <echo message="Executing FROG target: ${what}"/>
+    <ant dir="./frog" target="${what}"/>    
+    
   </target>
   
   <!--
